--- a/.gitignore
+++ b/.gitignore
@@ -101,3 +101,8 @@ ENV/
 *.npy
 *.id2word
 *.state
+.idea/EECS_CapstoneProject.iml
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+.idea/workspace.xml
