--- a/Web/crawl/app.yaml
+++ b/Web/crawl/app.yaml
@@ -14,6 +14,10 @@ runtime_config:
 handlers:
 - url: /static
   static_dir: static
+  secure: always
+- url: /.*
+  script: crawl.wsgi.py
+  secure: always
 
 # This sample incurs costs to run on the App Engine flexible environment.
 # The settings below are to reduce costs during testing and are not appropriate
