修正伺服器環境出現的Bug
狗幹，Word Cloud畫的圖要想辦法用API讀寫Google Cloud Storage

--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,6 @@ ENV/
 # vscode
 .vscode
 Web/crawl/static/media/wordcloud_plot.png
+.idea/inspectionProfiles/Project_Default.xml
+Web/crawl/static/media/wordcloud_plot.png
+Web/crawl/static/media/wordcloud_plot.png
