--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,4 @@ Web/crawl/static/media/wordcloud_plot.png
 .idea/inspectionProfiles/Project_Default.xml
 Web/crawl/static/media/wordcloud_plot.png
 Web/crawl/static/media/wordcloud_plot.png
+Web/crawl/crawl/apikey.py
