--- a/Web/crawl/app.yaml
+++ b/Web/crawl/app.yaml
@@ -28,8 +28,8 @@ manual_scaling:
 resources:
   cpu: 1
   memory_gb: .5
-  disk_size_gb: 100
+  disk_size_gb: 20
 
-network:
-  forwarded_ports:
-    - 8080/tcp
+#network:
+#  forwarded_ports:
+#    - 8080/tcp
