--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,4 @@ Web/crawl/static/media/wordcloud_plot.png
 Web/crawl/static/media/wordcloud_plot.png
 Web/crawl/static/media/wordcloud_plot.png
 Web/crawl/crawl/apikey.py
+DataProcessing/test_data/model_test
